Add receipt upload feature
- Set up LocalStack with Docker Compose
- Configure AWS SDK for S3 operations
- Create upload-receipt API route with validation
- Add file input to ExpenseForm with client-side validation
- Update TypeScript interfaces to include receiptUrl
- Display receipt links in ExpenseCard
- Update .gitignore to exclude localstack-data and .env.local

--- a/docs/ADR/ADR-006.md
+++ b/docs/ADR/ADR-006.md
@@ -4,21 +4,24 @@
 Accepted
 
 ## Context
-I utilized Tailwind CSS in my React components, removing the need of writing custom CSS files for each component. 
+I explore what LocalStack is, and why it's valuable for cloud development. Modern applications need more than text data. Users expect to upload profile pictures, attach receipts, share documents, and store files. The industry standard is AWS S3 (Simple Storage Service).
 
 **Requirements:**
-- 
+- File upload form with validation
+- Receipt storage in LocalStack S3
+- Receipt URLs linked to expenses
+- "View Receipt" links on expense cards
 
 
 **Options considered:**
-1. **AWS S3**: 
-2. **LocalStack**: 
+1. **AWS S3**: During development, I'd pay for test uploads and every API request.
+2. **LocalStack**: Emulates AWS S3, allowing me to learn AWS S3 functionalities without having to pay.
 
 ## Decision
-
+LocalStack
 
 **Rationale:**
-- 
+- Allows me to learn AWS S3 from a safe, free tool.
 
 ## Consequences
 
@@ -32,7 +35,7 @@ I utilized Tailwind CSS in my React components, removing the need of writing cus
 - 
 
 ## Date
-10/03/25
+11/17/25
 
 ## Participants
 Zhuolin Li (myself)
